// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@list-item: component checks * template matches snapshot * description 1`] = `
<@theme(ListItem)
  description="Description"
  forwardedRef={null}
/>
`;

exports[`@list-item: component checks * template matches snapshot * text styles 1`] = `
<@theme(ListItem)
  description="Description"
  descriptionStyle={
    Object {
      "color": "blue",
      "letterSpacing": 6,
    }
  }
  forwardedRef={null}
  title="Title"
  titleStyle={
    Object {
      "fontSize": 22,
      "lineHeight": 24,
    }
  }
/>
`;

exports[`@list-item: component checks * template matches snapshot * title 1`] = `
<@theme(ListItem)
  forwardedRef={null}
  title="Title"
/>
`;

exports[`@list-item: component checks * template matches snapshot * with accessory 1`] = `
<@theme(ListItem)
  accessory={[Function]}
  description="Description"
  forwardedRef={null}
  title="Title"
/>
`;

exports[`@list-item: component checks * template matches snapshot * with icon 1`] = `
<@theme(ListItem)
  description="Description"
  forwardedRef={null}
  icon={[Function]}
  title="Title"
/>
`;
